0.12
    moved shp-reader into separate repository: https://github.com/graphhopper/graphhopper-reader-shp    
    
0.11
    web resources for dropwizard web framework (no servlets anymore)
    prefix -Dgraphhopper. for command line arguments necessary, see docs/web/quickstart.md or docs/core/quickstart-from-source.md#running--debbuging-with-intellij for details
    delegated reading properties to dropwizard, i.e. the new format yml is not read again in GraphHopper.init
    changed file format for landmarks #1376

0.9
    remove war bundling support #297
    rename of DefaultModule to GraphHopperModule and GHServletModule to GraphHopperServletModule
    EncodedValue uses Math.round(value/factor). This can change the retrieved values for EncodedValues #954
    EncodedDoubleValue and EncodedValue requires maxValue/factor to be a natural number #954
    default base algorithm for all modes is bidirectional A* (except speed mode)
    introduced landmarks based hybrid mode, #780
    moving all prepare.xy configs to prepare.ch.xy and e.g. disallow the old
    removed deprecated methods in GraphHopper (setCHWeighting, setCHWeightings, getCHWeightings, setCHWeightings, getCHPrepareThreads, setCHPrepareThreads), Path.calcMillis, findID of LocationIndex and all implementations

0.8
    refactoring to Weighting class, see #807
    removed FlagEncoder from parameters as weighting.getFlagEncoder can and is used
    all properties with prefix "osmreader." changed to "datareader." and osmreader.osm changed to datareader.file
    maven/gradle dependency graphhopper is now splitted into graphhopper-core and graphhopper-reader-osm, i.e. if you previouls depend on 'graphhopper' artificat you should now use graphhopper-reader-osm except environments like Android where you just load the graph and do no import
    use GraphHopperOSM as base class instead of GraphHopper
    OSM reader separated from core, use new graphhopper-core package