@@ -3,7 +3,7 @@ package com.graphhopper.routing.profiles;
 import com.graphhopper.storage.IntsRef;
 
 /**
- * This class provides access to an edge property of type boolean. The default value is false.
+ * This interface defines access to an edge property of type boolean. The default value is false.
  */
 public interface BooleanEncodedValue extends EncodedValue {
     void setBool(boolean reverse, IntsRef ref, boolean value);
