@@ -22,7 +22,6 @@ import com.carrotsearch.hppc.IntIndexedContainer;
 import com.graphhopper.coll.GHBitSet;
 import com.graphhopper.coll.GHBitSetImpl;
 import com.graphhopper.routing.profiles.BooleanEncodedValue;
-import com.graphhopper.routing.profiles.DecimalEncodedValue;
 import com.graphhopper.routing.util.DefaultEdgeFilter;
 import com.graphhopper.routing.util.EdgeFilter;
 import com.graphhopper.routing.util.FlagEncoder;
@@ -279,7 +278,7 @@ public class PrepareRoutingSubnetworks {
         }
 
         public BooleanEncodedValue getAccessEnc() {
-               return accessEnc;
+            return accessEnc;
         }
     }
 }
