@@ -1,4 +1,6 @@
 0.12
+    big refactoring #1447: to increase 64bit limit of flags, make reverse direction handling easier, to allow shared EncodedValues,
+        remove reverseFlags method, much simpler property access, simplify FlagEncoder (maybe even deprecate this interface at a later stage)
     moved shp-reader into separate repository: https://github.com/graphhopper/graphhopper-reader-shp    
     
 0.11
@@ -143,9 +145,9 @@
         graphhopper: use maps from 0.2 path; updated maps
         mapsforge: use mapsforge-map dependency; merged #461; avoid duplicates otherwise mapsforge-core would be duplicate (?)
     refactored/renamed classes and methods:
-        refactor 'edgeFlags' from int to long (still only int is stored)
+        refactor 'flags' from int to long (still only int is stored)
         replacing Graph.edge(a,b,dist,edgeFlags) by Graph.edge(a,b).setDistance().setFlags()
-        FlagEncoder.edgeFlags => use FlagEncoder.setProperties or separate setAccess and setSpeed method
+        FlagEncoder.flags => use FlagEncoder.setProperties or separate setAccess and setSpeed method
         renamed LocationIDResult to QueryResult and Location2NodesNtree to LocationIndexTree
         renamed Location2IDIndex to LocationIndex
         renamed WeightCalculation to Weighting and getWeight to calcWeight        
